--- a/CryptoAppXamarin/CryptoAppXamarin/CryptoAppXamarin.csproj
+++ b/CryptoAppXamarin/CryptoAppXamarin/CryptoAppXamarin.csproj
@@ -17,6 +17,9 @@
     <EmbeddedResource Update="Common\Controls\FlyoutHeader.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Models\AddTransaction\AddTransactionPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Models\Assets\AssetsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
